feat: Upgrade Spring Boot to 3.5.14. Upgrade related dependencies too (#75)
* feat: Spring Boot upgrade to 3.3.13: changes by Openrewrite plugin. Also: atp libraries dependencies are changed to ones already upgraded to Spring Boot 3.3.13.

* fix: Some code check errors/warns are fixed.

* refactor: Kafka factory beans are migrated to modern spring-kafka API.

* refactor: Unify dependencies: org.springframework.util.ObjectUtils is replaced to org.apache.commons.lang3.StringUtils.

* build: Bump plugins versions: openapi-generator-maven-plugin to 7.9.0, maven-surefire-plugin.version to 3.1.2. Bump javers to 7.9.0, lombok to 1.18.44. Configs of maven-compiler-plugin are unified.

* build: openapi-generator-maven-plugin configuration is upgraded for Spring Boot 3.3 and optimized.

* fix(deps): Bump jackson to 2.18.6, junit-jupiter to 5.10.5, undertow to 2.3.21.Final, logback to 1.5.32, netty to 4.1.125.Final, mapstruct to1.6.3, tomcat-embed to 'Spring Boot managed'.

* fix: Javers and Mongo processing are fixed according to modern API changes.

* fix: Pact tests (consumer side) are fixed. Instead of au.com.dius.pact.consumer:junit:4.1.23, au.com.dius.pact.consumer:junit5:4.6.15 dependency is added.

* fix(deps): Align versions of mockito, jupiter, slf4j and log4j dependencies. Improve dependencyManagement of these dependencies.

* fix(tests): Remove SpringExtension from all classes having MockitoExtension, to avoid wrong tests execution.

* fix(tests): Pact test stubbing is fixed.

* fix: SPRING_PROFILES config property is renamed to ACTIVE_PROFILES_SPRING.

* fix(deps): Bump httpclient5 to 5.4.4, httpcore5 to 5.3.4, exclude unwilling commons-logging dependencies.

* fix(deps): Bump feign-jackson to 13.5, au.com.dius.pact.provider:junit5spring to 4.6.15, org.modelmapper:modelmapper to 3.2.5, com.google.code.gson:gson to 2.13.2. Improve jackson dependencies management.

* fix(deps): Fix missed com.google.code.gson:gson version to 2.13.2.

* fix(tests): Pact tests (provid