@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -88,9 +88,9 @@ public class RerunService {
                 newExecutionRequests.add(rerunTestRuns(testRunIds));
             }
         });
-        UUID erId = newExecutionRequests.get(0);
+        UUID erId = newExecutionRequests.getFirst();
         MdcUtils.put(MdcField.EXECUTION_REQUEST_ID.toString(), erId);
-        UUID projectId = executionRequestService.getProjectIdByExecutionRequestId(uuidList.get(0));
+        UUID projectId = executionRequestService.getProjectIdByExecutionRequestId(uuidList.getFirst());
         String msg =
                 "ER has been restarted.\n"
                         + "TestRuns were formed by ram for rerun.\n"
@@ -110,7 +110,7 @@ public class RerunService {
         List<TestRun> testRuns = testRunService.getTestRunsIdByExecutionRequestIdAndTestingStatuses(executionRequestId,
                 request.getStatuses());
         if (isEmpty(testRuns)) {
-            String message = String.format("Test Runs with statuses %s for rerun ER %s were not found.",
+            String message = "Test Runs with statuses %s for rerun ER %s were not found.".formatted(
                     request.getStatuses(), executionRequestId);
             log.error(message);
             throw new AtpException(message);
@@ -143,7 +143,7 @@ public class RerunService {
         if (isEmpty(testRuns)) {
             ExceptionUtils.throwWithLog(log, new RamTestRunsRerunNotAppropriateStatusException());
         }
-        UUID finalExecutionRequestId = testRuns.get(0).getExecutionRequestId();
+        UUID finalExecutionRequestId = testRuns.getFirst().getExecutionRequestId();
         if (testRuns
                 .stream()
                 .anyMatch(tr -> !tr.getExecutionRequestId().equals(finalExecutionRequestId))) {
