@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -43,9 +43,6 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 
 import org.apache.commons.compress.utils.Sets;
 import org.modelmapper.ModelMapper;
@@ -137,6 +134,8 @@ import org.springframework.stereotype.Service;
 
 import com.google.common.base.Strings;
 import com.google.gson.JsonObject;
+import jakarta.annotation.Nonnull;
+import jakarta.annotation.Nullable;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -1373,7 +1372,7 @@ public class TestRunService extends CrudService<TestRun> {
                             final List<String> validationTableLabels = steps.stream()
                                     .filter(step -> !isEmpty(step.getValidationLabels()))
                                     .flatMap(step -> step.getValidationLabels().stream())
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                             return !isEmpty(validationLabels) || !isEmpty(validationTableLabels);
                         }
@@ -1502,7 +1501,7 @@ public class TestRunService extends CrudService<TestRun> {
 
                     List<LogRecord> failedLogRecords = context.getTestRunFailedLogRecordsMap().get(testRunId);
                     if (nonNull(failedLogRecords) && !failedLogRecords.isEmpty()) {
-                        LogRecord firstFailedStep = getFirstFailedStep(failedLogRecords, failedLogRecords.get(0));
+                        LogRecord firstFailedStep = getFirstFailedStep(failedLogRecords, failedLogRecords.getFirst());
                         treeNode.setFailedStep(
                                 Collections.singletonList(modelMapper.map(firstFailedStep,
                                         LabelNodeReportResponse.FailedLogRecordNodeResponse.class))
@@ -1551,7 +1550,7 @@ public class TestRunService extends CrudService<TestRun> {
                 logRecord -> logRecord.getParentRecordId() == null,
                 Comparator.comparingLong(LogRecord::getCreatedDateStamp));
 
-        return getFirstFailedStep(failedLogRecords, failedRootLogRecords.get(0));
+        return getFirstFailedStep(failedLogRecords, failedRootLogRecords.getFirst());
     }
 
     /**
@@ -1762,9 +1761,8 @@ public class TestRunService extends CrudService<TestRun> {
                 if (!isEmpty(validationSteps)) {
                     validationSteps.stream()
                             .filter(step -> !isEmpty(step.getValidationLabels()))
-                            .forEach(step -> step.getValidationLabels().forEach(label -> {
-                                        validationLabelMap.merge(label, step.getStatus(), statusMergeFunc);
-                                    })
+                            .forEach(step -> step.getValidationLabels().forEach(label ->
+                                    validationLabelMap.merge(label, step.getStatus(), statusMergeFunc))
                             );
                 }
             }
@@ -2071,7 +2069,7 @@ public class TestRunService extends CrudService<TestRun> {
                         testRunRepository.findAllByExecutionRequestId(execRequest.getUuid())
                                 .stream().filter(testRun -> testRun.isFinalTestRun()
                                         && testCasesList.contains(testRun.getTestCaseId()))
-                                .collect(Collectors.toList());
+                                .toList();
                 if (!isEmpty(intermediateTestRunsList)) {
                     intermediateTestRunsList.forEach(testRun -> {
                         testRun.setFinalTestRun(false);
@@ -2130,7 +2128,7 @@ public class TestRunService extends CrudService<TestRun> {
         for (TestRun testRun : testRuns) {
             List<LogRecord> testRunLogRecords = logRecords.stream()
                     .filter(logRecord -> testRun.getUuid().equals(logRecord.getTestRunId()))
-                    .collect(Collectors.toList());
+                    .toList();
             Set<String> validationLabels = new HashSet<>();
             for (LogRecord logRecord : testRunLogRecords) {
                 if (!isEmpty(logRecord.getValidationLabels())) {
@@ -2319,6 +2317,6 @@ public class TestRunService extends CrudService<TestRun> {
         final String fullUrl = host + "/browse/" + issue.getKey();
         final String htmlLinkPattern = "<a href=\"%s\" target=\"_blank\">%s</a>";
 
-        return String.format(htmlLinkPattern, fullUrl, issue.getKey());
+        return htmlLinkPattern.formatted(fullUrl, issue.getKey());
     }
 }
