@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -17,8 +17,8 @@
 package org.qubership.atp.ram.services;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Matchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -34,8 +34,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
 import org.mockito.Spy;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
 import org.qubership.atp.ram.EnvironmentsInfoMock;
 import org.qubership.atp.ram.ExecutionRequestsMock;
@@ -47,12 +47,11 @@ import org.qubership.atp.ram.models.ExecutionRequest;
 import org.qubership.atp.ram.models.TestRun;
 import org.qubership.atp.ram.repositories.ExecutionRequestRepository;
 import org.qubership.atp.ram.repositories.TestRunRepository;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 public class JiraIntegrationServiceTest {
 
     @Mock
@@ -77,7 +76,6 @@ public class JiraIntegrationServiceTest {
 
     @BeforeEach
     public void setUp() {
-        MockitoAnnotations.initMocks(jiraIntegrationService);
         ReflectionTestUtils.setField(jiraIntegrationService, // inject into this object
                 "catalogueUrl", // assign to this field
                 catalogueUrl); // object to be injected
@@ -90,12 +88,12 @@ public class JiraIntegrationServiceTest {
         ExecutionRequest executionRequest = ExecutionRequestsMock.generateRequestById(lastTestRun.getExecutionRequestId());
         EnvironmentsInfo environmentsInfo = EnvironmentsInfoMock.generateEnvInfoByUuids(executionRequest.getUuid(),
                 executionRequest.getEnvironmentId());
-        List<UUID> testRunsUuids = Arrays.asList(lastTestRun.getUuid());
-        List<UUID> executionRequestUuids = Arrays.asList(executionRequest.getUuid());
+        List<UUID> testRunsUuids = List.of(lastTestRun.getUuid());
+        List<UUID> executionRequestUuids = List.of(executionRequest.getUuid());
 
-        List<TestRun> testRuns = Arrays.asList(lastTestRun);
-        List<EnvironmentsInfo> environmentsInfos = Arrays.asList(environmentsInfo);
-        List<ExecutionRequest> executionRequests = Arrays.asList(executionRequest);
+        List<TestRun> testRuns = List.of(lastTestRun);
+        List<EnvironmentsInfo> environmentsInfos = List.of(environmentsInfo);
+        List<ExecutionRequest> executionRequests = List.of(executionRequest);
 
         given(repositoryMock.findAllByUuidIn(testRunsUuids)).willReturn(testRuns);
         given(executionRequestRepositoryMock.findAllByUuidIn(executionRequestUuids)).willReturn(executionRequests);
@@ -108,7 +106,7 @@ public class JiraIntegrationServiceTest {
 
         List<TestRunToJiraInfo> actualTestRunInfo = jiraIntegrationService.getTestRunsForJiraInfoByIds(testRunsUuids);
 
-        assertEquals(Arrays.asList(expectedTestRunToJiraInfo), actualTestRunInfo);
+        assertEquals(List.of(expectedTestRunToJiraInfo), actualTestRunInfo);
         verify(repositoryMock, times(1)).findAllByUuidIn(testRunsUuids);
         verify(executionRequestRepositoryMock, times(1)).findAllByUuidIn(executionRequestUuids);
         verify(testRunServiceMock, times(1)).getByTestCase(lastTestRun.getTestCaseId());
@@ -120,11 +118,11 @@ public class JiraIntegrationServiceTest {
 
         TestRun lastTestRun = TestRunsMock.generateSimpleTestRun(UUID.randomUUID());
         ExecutionRequest executionRequest = ExecutionRequestsMock.generateRequestById(lastTestRun.getExecutionRequestId());
-        List<UUID> testRunsUuids = Arrays.asList(lastTestRun.getUuid());
-        List<UUID> executionRequestUuids = Arrays.asList(executionRequest.getUuid());
+        List<UUID> testRunsUuids = List.of(lastTestRun.getUuid());
+        List<UUID> executionRequestUuids = List.of(executionRequest.getUuid());
 
-        List<TestRun> testRuns = Arrays.asList(lastTestRun);
-        List<ExecutionRequest> executionRequests = Arrays.asList(executionRequest);
+        List<TestRun> testRuns = List.of(lastTestRun);
+        List<ExecutionRequest> executionRequests = List.of(executionRequest);
 
         given(repositoryMock.findAllByUuidIn(testRunsUuids)).willReturn(testRuns);
         given(executionRequestRepositoryMock.findAllByUuidIn(executionRequestUuids)).willReturn(executionRequests);
@@ -138,7 +136,7 @@ public class JiraIntegrationServiceTest {
 
         List<TestRunToJiraInfo> actualTestRunInfo = jiraIntegrationService.getTestRunsForJiraInfoByIds(testRunsUuids);
 
-        assertEquals(Arrays.asList(expectedTestRunToJiraInfo), actualTestRunInfo);
+        assertEquals(List.of(expectedTestRunToJiraInfo), actualTestRunInfo);
         verify(repositoryMock, times(1)).findAllByUuidIn(testRunsUuids);
         verify(executionRequestRepositoryMock, times(1)).findAllByUuidIn(executionRequestUuids);
         verify(testRunServiceMock, times(1)).getByTestCase(lastTestRun.getTestCaseId());
@@ -154,12 +152,12 @@ public class JiraIntegrationServiceTest {
         ExecutionRequest executionRequest = ExecutionRequestsMock.generateRequestById(notLastRun.getExecutionRequestId());
         EnvironmentsInfo environmentsInfo = EnvironmentsInfoMock.generateEnvInfoByUuids(executionRequest.getUuid(),
                 executionRequest.getEnvironmentId());
-        List<UUID> testRunsUuids = Arrays.asList(notLastRun.getUuid());
-        List<UUID> executionRequestUuids = Arrays.asList(executionRequest.getUuid());
+        List<UUID> testRunsUuids = List.of(notLastRun.getUuid());
+        List<UUID> executionRequestUuids = List.of(executionRequest.getUuid());
 
-        List<TestRun> testRuns = Arrays.asList(notLastRun);
-        List<EnvironmentsInfo> environmentsInfos = Arrays.asList(environmentsInfo);
-        List<ExecutionRequest> executionRequests = Arrays.asList(executionRequest);
+        List<TestRun> testRuns = List.of(notLastRun);
+        List<EnvironmentsInfo> environmentsInfos = List.of(environmentsInfo);
+        List<ExecutionRequest> executionRequests = List.of(executionRequest);
 
         given(repositoryMock.findAllByUuidIn(testRunsUuids)).willReturn(testRuns);
         given(executionRequestRepositoryMock.findAllByUuidIn(executionRequestUuids)).willReturn(executionRequests);
@@ -172,7 +170,7 @@ public class JiraIntegrationServiceTest {
 
         List<TestRunToJiraInfo> actualData = jiraIntegrationService.getTestRunsForJiraInfoByIds(testRunsUuids);
 
-        assertEquals(Arrays.asList(expectedTestRunToJiraInfo), actualData);
+        assertEquals(List.of(expectedTestRunToJiraInfo), actualData);
         verify(repositoryMock, times(1)).findAllByUuidIn(testRunsUuids);
         verify(executionRequestRepositoryMock, times(1)).findAllByUuidIn(executionRequestUuids);
         verify(testRunServiceMock, times(1)).getByTestCase(notLastRun.getTestCaseId());
@@ -192,11 +190,11 @@ public class JiraIntegrationServiceTest {
         EnvironmentsInfo environmentsInfo = EnvironmentsInfoMock.generateEnvInfoByUuids(executionRequest.getUuid(),
                 executionRequest.getEnvironmentId());
         List<UUID> testRunsUuids = Arrays.asList(lastTestRun.getUuid(), notLastTestRun.getUuid());
-        List<UUID> executionRequestUuids = Arrays.asList(executionRequest.getUuid());
+        List<UUID> executionRequestUuids = List.of(executionRequest.getUuid());
 
         List<TestRun> testRuns = Arrays.asList(lastTestRun, notLastTestRun);
-        List<EnvironmentsInfo> environmentsInfos = Arrays.asList(environmentsInfo);
-        List<ExecutionRequest> executionRequests = Arrays.asList(executionRequest);
+        List<EnvironmentsInfo> environmentsInfos = List.of(environmentsInfo);
+        List<ExecutionRequest> executionRequests = List.of(executionRequest);
 
         given(repositoryMock.findAllByUuidIn(testRunsUuids)).willReturn(testRuns);
         given(executionRequestRepositoryMock.findAllByUuidIn(executionRequestUuids)).willReturn(executionRequests);
@@ -234,10 +232,12 @@ public class JiraIntegrationServiceTest {
                 + "?node=" + lastTestRun.getUuid());
         expectedTestRunToJiraInfo.setTestCaseId(lastTestRun.getTestCaseId());
         expectedTestRunToJiraInfo.setExecutionRequestId(lastTestRun.getExecutionRequestId());
-        expectedTestRunToJiraInfo.setEnvironmentInfo("||Environment Name|| Urls|| Version||\n" +
-                "|qa1|[qa1.some-domain.com, qa1.dev.some-domain.com]|qa1Build|\n" +
-                "|qa2|[qa2.some-domain.com, qa2.dev.some-domain.com]|qa2Build|\n" +
-                "|qa3|[qa3.some-domain.com, qa3.dev.some-domain.com]|-|\n");
+        expectedTestRunToJiraInfo.setEnvironmentInfo("""
+                ||Environment Name|| Urls|| Version||
+                |qa1|[qa1.some-domain.com, qa1.dev.some-domain.com]|qa1Build|
+                |qa2|[qa2.some-domain.com, qa2.dev.some-domain.com]|qa2Build|
+                |qa3|[qa3.some-domain.com, qa3.dev.some-domain.com]|-|
+                """);
         return expectedTestRunToJiraInfo;
     }
 
