@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -28,11 +28,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
-import org.apache.commons.lang.RandomStringUtils;
+import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.qubership.atp.ram.enums.TestingStatuses;
 import org.qubership.atp.ram.model.LogRecordWithParentResponse;
 import org.qubership.atp.ram.models.LogRecord;
@@ -44,12 +45,11 @@ import org.qubership.atp.ram.models.logrecords.parts.FileType;
 import org.qubership.atp.ram.repositories.CustomLogRecordRepository;
 import org.qubership.atp.ram.repositories.LogRecordRepository;
 import org.qubership.atp.ram.repositories.TestRunRepository;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.ImmutableMap;
 
-@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 public class PotServiceTest {
 
     private PotService potService;
@@ -192,10 +192,10 @@ public class PotServiceTest {
 
 
         PotsStatisticsPerAction potsStatisticsPerAction1 = new PotsStatisticsPerAction(parent1.getName(),
-                parent1.getTestingStatus(), children1.getFileMetadata().get(0).getFileName(),
+                parent1.getTestingStatus(), children1.getFileMetadata().getFirst().getFileName(),
                 children1.getUuid().toString());
         PotsStatisticsPerAction potsStatisticsPerAction2 = new PotsStatisticsPerAction(parent2.getName(),
-                parent2.getTestingStatus(), children2.getFileMetadata().get(0).getFileName(),
+                parent2.getTestingStatus(), children2.getFileMetadata().getFirst().getFileName(),
                 children2.getUuid().toString());
 
         List<PotsStatisticsPerAction> exp = Arrays.asList(potsStatisticsPerAction1, potsStatisticsPerAction2);
