@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -28,6 +28,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.qubership.atp.ram.LogRecordMock;
 import org.qubership.atp.ram.TestRunsMock;
 import org.qubership.atp.ram.entities.treenodes.LogRecordTreeNode;
@@ -35,9 +36,8 @@ import org.qubership.atp.ram.entities.treenodes.TreeNode;
 import org.qubership.atp.ram.enums.ExecutionStatuses;
 import org.qubership.atp.ram.models.LogRecord;
 import org.qubership.atp.ram.models.TestRun;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 public class TreeNodeServiceGetParentLogRecordsTreeTest {
 
     @InjectMocks
@@ -98,7 +98,7 @@ public class TreeNodeServiceGetParentLogRecordsTreeTest {
         Assertions.assertNotNull(logRecordTreeNode.getChildren());
         Assertions.assertEquals(3, logRecordTreeNode.getChildren().size());
 
-        TreeNode resultChild1TreeNode = logRecordTreeNode.getChildren().get(0);
+        TreeNode resultChild1TreeNode = logRecordTreeNode.getChildren().getFirst();
         Assertions.assertEquals(LogRecordTreeNode.class, resultChild1TreeNode.getClass());
         LogRecordTreeNode resultChild1LogRecordTreeNode = (LogRecordTreeNode) resultChild1TreeNode;
 
