@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -21,9 +21,9 @@ import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
-import static org.mockito.Matchers.any;
-import static org.mockito.Matchers.eq;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 import static org.qubership.atp.ram.utils.StreamUtils.extractIds;
 
@@ -42,8 +42,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.qubership.atp.ram.TestRunsMock;
-import org.qubership.atp.ram.entities.treenodes.ExecutionRequestTreeNode;
 import org.qubership.atp.ram.entities.treenodes.TreeNode;
 import org.qubership.atp.ram.model.datacontext.TestRunsDataContext;
 import org.qubership.atp.ram.models.ExecutionRequest;
@@ -55,11 +55,10 @@ import org.qubership.atp.ram.models.ValidationLabelConfigTemplate;
 import org.qubership.atp.ram.models.ValidationLabelConfigTemplate.LabelConfig;
 import org.qubership.atp.ram.utils.StreamUtils;
 import org.qubership.atp.ram.utils.TestCaseMock;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
 
 import com.google.common.collect.ImmutableSet;
 
-@ExtendWith(SpringExtension.class)
+@ExtendWith(MockitoExtension.class)
 public class TreeNodeServiceTest {
 
     @InjectMocks
@@ -164,7 +163,7 @@ public class TreeNodeServiceTest {
         configs.add(new LabelConfig(ImmutableSet.of("TESTVL2"), "TESTVL2", false, false, 0));
         configs.add(new LabelConfig(ImmutableSet.of("TESTVL3"), "TESTVL3", false, false, 1));
         template.setLabels(configs);
-        List<String> expectedResult = Arrays.asList("testVL5");
+        List<String> expectedResult = List.of("testVL5");
         List<String> actualResult = treeNodeService.orderValidationLabels(labels, template);
 
         assertEquals(expectedResult, actualResult);
@@ -186,7 +185,7 @@ public class TreeNodeServiceTest {
         LabelTemplate labelTemplate = new LabelTemplate();
         labelTemplate.setUuid(labelTemplateId);
         labelTemplate.setName("labelTemplate");
-        labelTemplate.setLabelNodes(Arrays.asList(labelNode));
+        labelTemplate.setLabelNodes(List.of(labelNode));
         Set labels = new HashSet();
         labels.add(labelId);
         List<TestRun> testruns = new ArrayList<>();
@@ -215,8 +214,8 @@ public class TreeNodeServiceTest {
                 treeNodeService.getExecutionRequestTree(executionRequest, labelTemplateId, null, true, false);
 
         assertEquals( 1, treeNode.getChildren().size(), "Root node should contain 1 children with label");
-        assertEquals(testruns.size(), treeNode.getChildren().get(0).getChildren().size(), "All testRuns should be inside the label");
-        List<String> actualTestRunNames = treeNode.getChildren().get(0).getChildren()
+        assertEquals(testruns.size(), treeNode.getChildren().getFirst().getChildren().size(), "All testRuns should be inside the label");
+        List<String> actualTestRunNames = treeNode.getChildren().getFirst().getChildren()
                 .stream().map(TreeNode::getName).collect(Collectors.toList());
         assertEquals(sortedTestRunNames, actualTestRunNames, "TestRuns should be ordered by name inside label");
     }
@@ -232,6 +231,6 @@ public class TreeNodeServiceTest {
         TreeNode actualTreeNode = treeNodeService.getExecutionRequestTestRunTree(executionRequest.getUuid());
         // then
         assertNotNull(actualTreeNode);
-        Assertions.assertTrue(((ExecutionRequestTreeNode) actualTreeNode).isExecutionRequestVirtual());
+        Assertions.assertTrue(actualTreeNode.isExecutionRequestVirtual());
     }
 }
