@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -21,8 +21,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.stream.Collectors;
-
-import javax.validation.Valid;
 
 import org.qubership.atp.integration.configuration.configuration.AuditAction;
 import org.qubership.atp.integration.configuration.mdc.MdcUtils;
@@ -79,6 +77,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
@@ -442,7 +441,7 @@ public class TestRunController /*implements TestRunControllerApi*/ {
     public void stopResume(@RequestBody List<UUID> uuidList) {
         List<UUID> requestsForStopping = service.getTestRunsForStoppingOrTerminating(uuidList);
         List<UUID> requestsForResuming = service.getTestRunsForResuming(uuidList);
-        TestRun firstTr = service.get(uuidList.get(0));
+        TestRun firstTr = service.get(uuidList.getFirst());
         orchestratorService.stopTestRun(requestsForStopping, firstTr.getExecutionRequestId());
         orchestratorService.resumeTestRun(requestsForResuming, firstTr.getExecutionRequestId());
     }
