@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -20,7 +20,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.atomic.AtomicBoolean;
 
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.qubership.atp.ram.models.WidgetType;
 import org.qubership.atp.ram.models.tree.TreeWalker;
 import org.qubership.atp.ram.service.mail.ReportParams;
@@ -40,7 +40,7 @@ public abstract class AbstractWidgetModelBuilder implements WidgetModelBuilder {
         Map<String, Object> model = buildModel(reportParams);
         updateDescription(model, reportParams);
 
-        log.debug(String.format("Model generated for reportParams=%s, model=%s",
+        log.debug("Model generated for reportParams=%s, model=%s".formatted(
                 reportParams,
                 model));
         return model;
