@@ -1,5 +1,5 @@
 /*
- * # Copyright 2024-2025 NetCracker Technology Corporation
+ * # Copyright 2024-2026 NetCracker Technology Corporation
  * #
  * # Licensed under the Apache License, Version 2.0 (the "License");
  * # you may not use this file except in compliance with the License.
@@ -35,7 +35,7 @@ public class RootCausesStatisticResponseAdapter {
      * @return datetime value as formatted string
      */
     public String getStartDate() {
-        String dateTimeFormat = String.format("%s %s", project.getDateFormat(), project.getTimeFormat());
+        String dateTimeFormat = "%s %s".formatted(project.getDateFormat(), project.getTimeFormat());
         String timeZone = project.getTimeZone();
 
         return TimeUtils.formatDateTime(rootCausesStatisticResponse.getStartDate(), dateTimeFormat, timeZone);
